# synodic

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  HARNESS.md  README.md  harness  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  publish.config.ts  railway.toml
.claude/: settings.json
.claude/hooks/: intercept.sh  post-tool-log.sh
.githooks/: pre-push
.github/: CI_FIX_ADOPTION.md  setup-env.sh
.github/workflows/: ci-fix.yml  ci.yml  copilot-setup-steps.yml  deploy.yml  publish-dry-run.yml  publish.yml  qa.yml  release.yml
.harness/: README.md  eval.governance.jsonl  gates.yml  harness.governance.jsonl
.harness/pipelines/: fractal.yml  swarm.yml
.harness/rules/: cargo-fmt-check
.harness/scripts/: aggregate_governance.py  decompose_gate.py  evaluate_harness.py  harness_eval_runner.sh  prune_gate.py  reunify_merge.py  simulate_governance.py  solve_scheduler.py  static_gate.sh
cli/: Cargo.toml
cli/src/: main.rs  util.rs
cli/src/cmd/: eval.rs  (+1 more)
cli/synodic/: Cargo.toml
cli/synodic-eval/: Cargo.toml
cli/synodic-eval/src/: batch.rs  lib.rs  main.rs  report.rs  run.rs  util.rs
cli/synodic-eval/src/meta/: environment.rs  mod.rs  quality.rs  strategy.rs
cli/synodic-eval/src/score/: mod.rs  parser.rs  runner.rs  verdict.rs
cli/synodic-eval/src/setup/: devbench.rs  featurebench.rs  mod.rs  swebench.rs  synodic.rs
cli/synodic/src/: governance.rs  main.rs
cli/synodic/src/cmd/: eval.rs  fractal.rs  harness.rs  mod.rs  swarm.rs
cli/synodic/src/fractal/: decompose.rs  mod.rs  prune.rs  reunify.rs  schedule.rs
cli/synodic/src/harness/: mod.rs  rules.rs
cli/synodic/src/meta/: consult.rs  execute.rs  mod.rs  validate.rs
cli/synodic/src/pipeline/: executor.rs  gates.rs  mod.rs  schema.rs  validate.rs  vars.rs
cli/synodic/src/swarm/: checkpoint.rs  prune.rs
crates/syn-cli/: Cargo.toml
crates/syn-cli/src/: init.rs  main.rs
crates/syn-cli/templates/: HARNESS.md  aggregate_governance.py  harness-readme.md  static_gate.sh
crates/syn-engine/: Cargo.toml
crates/syn-types/: Cargo.toml
deploy/: railway.json
docker/: Dockerfile  entrypoint.sh
docs/: README.md
docs-site/: README.md
docs-site/docs/: agent-integration.md  api-reference.md  cli-reference.md  deployment.md  detection-rules.md  getting-started.md  intro.md  websocket.md
evals/: batch.sh  evals.json  report.sh  run.sh  score-synodic.sh  score.sh  score_runner.py
evals/setup/: devbench.sh  featurebench.sh  swebench.sh  synodic.sh
npm/: package.json
npm/cli-darwin-arm64/: package.json
npm/cli-darwin-x64/: package.json
npm/cli-linux-arm64/: package.json
npm/cli-linux-x64/: package.json
rust/: Cargo.toml
rust/harness-cli/: Cargo.toml
rust/harness-cli/src/: main.rs  util.rs
rust/harness-cli/src/cmd/: collect.rs  feedback.rs  fractal.rs  governance.rs  harness_legacy.rs  init.rs  intercept.rs  lifecycle.rs  list.rs  mod.rs  optimize.rs  orchestrate.rs  probe.rs  resolve.rs  rules.rs  run.rs  search.rs  serve.rs  stats.rs  status.rs  submit.rs  swarm.rs  watch.rs
rust/harness-cli/src/harness/: log.rs  mod.rs  run.rs
rust/harness-cli/src/meta/: consult.rs  execute.rs  mod.rs  validate.rs
rust/harness-cli/tests/: e2e.rs
rust/harness-core/: Cargo.toml
rust/harness-core/migrations/: 001_initial_schema.sql
rust/harness-core/migrations/pg/: 003_pipeline_runs.sql
rust/harness-core/src/: clustering.rs  events.rs  gate_adapter.rs  intercept.rs  l1.rs  lib.rs  llm.rs  pipeline.rs  probing.rs  scoring.rs  ui.rs
rust/harness-core/src/parsers/: claude.rs  copilot.rs  mod.rs
rust/harness-core/src/rules/: mod.rs
rust/harness-core/src/storage/: mod.rs  pool.rs  postgres.rs  sqlite.rs  tests.rs
rust/harness-http/: Cargo.toml
rust/harness-http/src/: main.rs  routes.rs  state.rs  ws.rs
rust/orchestra-core/: Cargo.toml
rust/orchestra-core/src/: lib.rs
rust/orchestra-core/src/fractal/: decompose.rs  mod.rs  prune.rs  reunify.rs  schedule.rs
rust/orchestra-core/src/pipeline/: executor.rs  gates.rs  schema.rs  validate.rs  vars.rs
rust/orchestra-core/src/swarm/: checkpoint.rs  mod.rs  prune.rs
schemas/: attack-report.json  branch-report.json  build-report.json  decompose-verdict.json  generate-report.json  inspect-verdict.json  merge-report.json  solve-report.json  strategy-set.json
scripts/: add-platform-deps.ts  bump-dev-version.ts  copy-platform-binaries.sh  decompose_gate.py  generate-platform-manifests.ts  prepare-publish.ts  publish-main-packages.ts  publish-platform-packages.ts  restore-packages.ts  set-npm-version.sh  sync-versions.ts  validate-manifest.ts  validate-no-workspace-protocol.ts  validate-platform-binaries.ts
skills/adversarial/: SKILL.md
skills/factory/: SKILL.md
skills/fractal/: SKILL.md
skills/swarm/: SKILL.md
specs/: BENCHMARKS.md  README.md  SCOPE-REVIEW.md
specs/001-agent-workspace-persistence/: README.md
specs/002-agent-fleet-execution-layer/: README.md
specs/003-fleet-execution-foundation/: README.md
specs/004-fleet-process-supervisor/: README.md
specs/005-agent-message-bus-task-orchestration/: README.md
specs/006-fleet-state-persistence-recovery/: README.md
specs/007-agent-fleet-identity-auth/: README.md
specs/008-local-agent-identity-auth/: README.md
specs/009-remote-agent-enrollment-control-plane/: README.md
specs/010-operator-auth-audit-rbac/: README.md
specs/011-fleet-coordination-optimization/: README.md
specs/012-advanced-coordination-patterns/: README.md
specs/013-ai-native-coordination-primitives/: README.md
specs/014-ai-native-domain-playbooks/: README.md
specs/015-sdd-ai-native-playbook/: README.md
specs/016-nemosis-teacher-student-distillation/: README.md
specs/017-ai-native-coordination-model/: README.md
specs/018-coordination-model-core-pipeline/: README.md
specs/019-coordination-model-theory/: README.md
specs/020-coordination-model-design/: README.md
specs/021-coordination-model-validation-distribution/: README.md
specs/022-coordination-primitives-visual-reference/: README.md
specs/023-coordination-model-roles-limitations/: README.md
(+148 files in other folders)
