[workspace]
resolver = "2"
members = ["crates/syn-cli", "crates/syn-engine", "crates/syn-types"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
syn-engine = { path = "crates/syn-engine" }
syn-types = { path = "crates/syn-types" }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
