[package]
name = "synodic-eval"
version = "0.1.0"
edition = "2021"
description = "Standalone AI coding evaluation framework — setup, agent, score pipeline"

[lib]
name = "synodic_eval"
path = "src/lib.rs"

[[bin]]
name = "synodic-eval"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
quick-xml = "0.31"
