[package]
name = "synodic"
version = "0.1.0"
edition = "2021"
description = "Synodic governance CLI — harness + eval"

[[bin]]
name = "synodic"
path = "src/main.rs"

[dependencies]
synodic-eval = { path = "../synodic-eval" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
rust-tfidf = "1"
serde_yaml = "0.9"
glob = "0.3"
