[package]
name = "syn-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "synodic"
path = "src/main.rs"

[dependencies]
syn-engine.workspace = true
syn-types.workspace = true
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
