[package]
name = "harness-core"
version = "0.1.0"
edition = "2021"
description = "Synodic harness-core — event types, storage, detection rules, log parsers"

[lib]
name = "harness_core"
path = "src/lib.rs"

[features]
default = []
postgres = ["dep:postgres"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
ulid = { version = "1", features = ["serde"] }
postgres = { version = "0.19", optional = true }

[dev-dependencies]
tempfile = "3"
