[package]
name = "harness-core"
version = "0.1.0"
edition = "2021"
description = "Synodic harness-core — L2 interception engine for AI agent governance"

[lib]
name = "harness_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
regex = "1"
