[package]
name = "harness-core"
version = "0.1.0"
edition = "2021"
description = "Synodic harness-core — L2 interception engine for AI agent governance"

[lib]
name = "harness_core"
path = "src/lib.rs"

[features]
default = ["sqlite"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
regex = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "chrono", "uuid", "json"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
indicatif = "0.17"
console = "0.15"
