[package]
name = "harness-http"
version = "0.1.0"
edition = "2021"
description = "Synodic harness-http — Axum REST API and dashboard server"

[[bin]]
name = "synodic-http"
path = "src/main.rs"

[features]
default = []
postgres = ["harness-core/postgres"]

[dependencies]
harness-core = { path = "../harness-core" }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
