[package]
name = "orchestra-core"
version = "0.1.0"
edition = "2021"
description = "AI coding coordination patterns — pipeline engine, fractal decomposition, speculative swarm"

[lib]
name = "orchestra_core"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
rust-tfidf = "1"
glob = "0.3"
